apps/infra/adminer/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: adminer
  name: adminer
