apps/infra/adminer/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  labels:
    app: adminer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          image: adminer:4.8.1
          ports:
            - containerPort: 8080
              name: http
          resources:
            limits:
              memory: 150Mi
              cpu: 100m
            requests:
              memory: 150Mi
              cpu: 100m
