apps/infra/adminer/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: adminer
spec:
  ports:
    - port: 8080
      name: http
      targetPort: http
  selector:
    app: adminer
